Fix scrollbar in header

--- a/public/assets/styles/pages/header.less
+++ b/public/assets/styles/pages/header.less
@@ -5,7 +5,7 @@
   align-items: flex-start;
   border-bottom: solid 1px @light-grey;
   display: flex;
-  overflow-x: scroll;
+  overflow-x: auto;
   padding: @g-padding-sidebar @g-padding-sidebar 0;
 
   .header__button {
